[package]
name = "zkp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bulletproofs = "4.0.0"
#curve25519-dalek = { version = "4.1.1", features = ["alloc", "precomputed-tables", "zeroize", "rand_core"] }
curve25519-dalek-ng = "4.1.1"
merlin = "3.0.0"
rand = "0.8.5"
secp256k1 = { version="0.28.0", features = ["rand", "rand-std"] }
sha2 = "0.10.8"
