[package]
name = "zkp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellman = "0.14.0"
bincode = "1.3.3"
bls12_381 = "0.8.0"
bulletproofs = "4.0.0"
#curve25519-dalek = { version = "4.1.1", features = ["alloc", "precomputed-tables", "zeroize", "rand_core"] }
curve25519-dalek-ng = "4.1.1"
ff = "0.13.0"
merlin = "3.0.0"
num-bigint = "0.4.4"
num-traits = "0.2.17"
pairing = "0.23.0"
rand = "0.8.5"
secp256k1 = { version="0.28.0", features = ["rand", "rand-std"] }
serde = "1.0.189"
serde_json = "1.0.107"
sha2 = "0.10.8"
